--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tabler/icons-react": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.0.6",
     "embla-carousel-react": "^8.0.0-rc17",
+    "framer-motion": "^11.1.3",
     "lucide-react": "^0.303.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
@@ -59,7 +62,7 @@
     "react-icons": "^4.12.0",
     "react-resizable-panels": "^1.0.7",
     "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.8.0",
     "zod": "^3.22.4"
